Fix accepting multiple license agreements

This patch fixes the handling of more than one license agreement by
setting d->handlingActionRequired = false in requeueTransaction().

Before, this was still true when entering slotEulaRequired() for the
second license. That one was not shown therefore, but Apper aborted
instead.

BUG: 326619